prevent horizontal overflow with rows

--- a/apps/core/static/scss/_rows.scss
+++ b/apps/core/static/scss/_rows.scss
@@ -7,8 +7,17 @@
             $gutter: map-get($grid-gutter-widths, $breakpoint);
             $max-width: map-get($container-max-widths, $breakpoint);
             margin-left: calc((100% - #{$max-width}) / 2);
-            margin-right: ($gutter / -2);
+            margin-right: 0;
         }
+    }
+
+    @include media-breakpoint-only(xs) {
+        $gutter: map-get($grid-gutter-widths, sm);
+        margin-right: ($gutter / 2);
+    }
+
+    > :last-child {
+        padding-right: 0;
     }
 }
 
@@ -21,7 +30,16 @@
             $gutter: map-get($grid-gutter-widths, $breakpoint);
             $max-width: map-get($container-max-widths, $breakpoint);
             margin-right: calc((100% - #{$max-width}) / 2);
-            margin-left: ($gutter / -2);
+            margin-left: 0;
         }
+    }
+
+    @include media-breakpoint-only(xs) {
+        $gutter: map-get($grid-gutter-widths, sm);
+        margin-left: ($gutter / 2);
+    }
+
+    > :last-child {
+        padding-left: 0;
     }
 }
